--- a/index.html
+++ b/index.html
@@ -5,104 +5,120 @@
     <title>Седона</title>
   </head>
   <body>
-    <header>
-      <div class="conatainer">
-        <nav>
-          <ul>
-            <li>
-              <a href="#">Информация</a>
-            </li>
-            <li>
-              <a href="#">Фото и видео</a>
-            </li>
-          </ul>
-        </nav>
-        <div class="logo">
-          <img src="logo.png" width="67" height="56" alt="City of Sedona">
-        </div>
-        <nav>
-          <ul>
-            <li>
-              <a href="#">Карта штата</a>
-            </li>
-            <li>
-              <a href="#">Гостиницы</a>
-            </li>
-          </ul>
-        </nav>
+    <div class="container">
+      <header>
+          <nav>
+            <ul>
+              <li>
+                <a href="#">Информация</a>
+              </li>
+              <li>
+                <a href="#">Фото и видео</a>
+              </li>
+              <li>
+                <a href="#">Карта штата</a>
+              </li>
+              <li>
+                <a href="#">Гостиницы</a>
+              </li>
+            </ul>
+          </nav>
+          <div class="logo">
+            <img src="logo.png" width="67" height="56" alt="City of Sedona">
+          </div>
+        </header>
+        <main class="index-main">
+          <div class="greeting"></div>
+          <div class="sedona-text">
+            <b>Седона - небольшой городок в Аризоне, заслуживающий большего!</b>
+            <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+          </div>
+          <div class="first-reasons">
+            <div class="blue-block">
+              <b>Настоящий городок</b>
+              <p class="blue-block-number">- №1 -</p>
+              <p class="blue-block-text">Седона - не аттракцион для туристов, там течет своя жизнь</p>
+            </div>
+          </div>
+          <div class="features">
+            <div class="features-item">
+              <b>Жилье</b>
+              <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+            </div>
+            <div class="features-item">
+              <b>Еда</b>
+              <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+            </div>
+            <div class="features-item">
+              <b>Сувениры</b>
+              <p>Не только китайского, но и местного производства!</p>
+            </div>
+          </div>
+          <div class="first-reasons">
+            <div class="blue-block">
+              <b>Там есть мост дьявола</b>
+              <p class="blue-block-number">- №2 -</p>
+              <p class="blue-block-text">Да, по нему можно пройти! Если, конечно, Вы осмелитесь</p>
+            </div>
+          </div>
+          <div class="last-reasons">
+            <div class="area">
+              <b>Небольшая площадь</b>
+              <p class="last-reasons-number">- №3 -</p>
+              <p class="last-reasons-text">Все достопримечательности находятся очень близко</p>
+            </div>
+            <div class="road">
+              <b>Красивая дорога</b>
+              <p class="last-reasons-number">- №4 -</p>
+              <p class="last-reasons-text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            </div>
+            <div class="tourists">
+              <b>Мало туристов</b>
+              <p class="last-reasons-number">- №5 -</p>
+              <p class="last-reasons-text">Большинство едет в Гранд Каньон и толпится там</p>
+            </div>
+          </div>
+          <div class="hotels">
+            <b>Заинтересовались?</b>
+            <p>
+              Укажите предполагаемые даты поездки, <br>
+              и мы покажем Вам лучшие предложения гостиниц в Седоне
+            </p>
+            <div class="search-form">
+              <a class="search-btn" href="#">
+                Поиск гостиницы в Седоне
+              </a>
+              <form action="#" method="get">
+                <label for="arrival-field">Дата заезда: </label>
+                <input type="" name="arrival" id="arrival-field" value="24 апреля 20017">
+                <label for="departure-field">Дата выезда: </label>
+                <input type="" name="departure" id="departure-field" value="4 июля 2017">
+                <label for="adults-field">Взрослые: </label>
+                <input type="" name="adults" id="adults-field" value="2">
+                <label for="children-field">Дети: </label>
+                <input type="" name="children" id="children-field" value="0">
+                <a class="find-btn" href="#">
+                  Найти
+                </a>
+              </form>
+            </div>
+          </div>
+          <div class="map">
+          </div>
+        </main>
+        <footer>
+          <div class="footer-item">
+            <a href="#">#VisitSedona</a>
+          </div>
+          <div class="footer-item">
+            <a href="#">Иконка 1</a>
+            <a href="#">Facebook</a>
+            <a href="#">Иконка 3</a>
+          </div>
+          <div class="footer-item">
+            <a href="#">Website by html academy</a>
+          </div>
+        </footer>
       </div>
-    </header>
-    <main class="container">
-      <div class="greeting">
-        <b><span class="welcome">Welcome</span></b>
-        <p><span class="gorgeous">- to the gorgeous -</span></p>
-        <h1>Sedona</h1>
-        <p class="quoute">"Because the Grand Canyon sucks!"</p>
-      </div>
-      <div class="sedona-text">
-        <b>Седона - небольшой городок в Аризоне, заслуживающий большего!</b>
-        <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
-      </div>
-      <div class="first-reason">
-        <div class="blue-block">
-          <b>Настоящий городок</b>
-          <p class="blue-block-number">- №1 -</p>
-          <p class="blue-block-text">Седона - не аттракцион для туристов, там течет своя жизнь</p>
-        </div>
-      </div>
-      <div class="features">
-        <div class="features-item">
-          <b>Жилье</b>
-          <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
-        </div>
-        <div class="features-item">
-          <b>Еда</b>
-          <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-        </div>
-        <div class="features-item">
-          <b>Сувениры</b>
-          <p>Не только китайского, но и местного производства!</p>
-        </div>
-      </div>
-      <div class="second-reason">
-        <div class="blue-block">
-          <b>Там есть мост дьявола</b>
-          <p class="blue-block-number">- №2 -</p>
-          <p class="blue-block-text">Да, по нему можно пройти! Если, конечно, Вы осмелитесь</p>
-        </div>
-      </div>
-      <div class="last-reasons">
-        <div class="area">
-          <b>Небольшая площадь</b>
-          <p class="last-reasons-number">- №3 -</p>
-          <p class="last-reasons-text">Все достопримечательности находятся очень близко</p>
-        </div>
-        <div class="road">
-          <b>Красивая дорога</b>
-          <p class="last-reasons-number">- №4 -</p>
-          <p class="last-reasons-text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-        </div>
-        <div class="tourists">
-          <b>Мало туристов</b>
-          <p class="last-reasons-number">- №5 -</p>
-          <p class="last-reasons-text">Большинство едет в Гранд Каньон и толпится там</p>
-        </div>
-      </div>
-      <div class="hotels">
-        <b>Заинтересовались?</b>
-        <p>
-          Укажите предполагаемые даты поездки, <br>
-          и мы покажем Вам лучшие предложения гостиниц в Седоне
-        </p>
-        <div class="search-form">
-          <a class="search-btn" href="#">
-            Поиск гостиницы в Седоне
-          </a>
-          <form action="get">
-
-          </form>
-        </div>
-      </div>
-    </main>
   </body>
 </html>
