сетка для главной страницы

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Седона</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <div class="container">
@@ -24,20 +25,27 @@
             </ul>
           </nav>
           <div class="logo">
-            <img src="logo.png" width="67" height="56" alt="City of Sedona">
+            <img src="img/logo.png" width="138" height="70" alt="City of Sedona">
           </div>
         </header>
         <main class="index-main">
-          <div class="greeting"></div>
-          <div class="sedona-text">
-            <b>Седона - небольшой городок в Аризоне, заслуживающий большего!</b>
-            <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+          <div class="greeting">
+            <div class="greeting-img">
+              <img src="img/Welcome.png" width="458" height="352" alt="Welcome to Sedona!">
+            </div>
+            <div class="greetin-text">
+              <b>Седона - небольшой городок в Аризоне, заслуживающий большего!</b>
+              <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+            </div>
           </div>
           <div class="first-reasons">
             <div class="blue-block">
               <b>Настоящий городок</b>
               <p class="blue-block-number">- №1 -</p>
               <p class="blue-block-text">Седона - не аттракцион для туристов, там течет своя жизнь</p>
+            </div>
+            <div class="first-reasons-pic">
+              <img src="img/Layer1.jpg" width="800px" height="260px" alt="фотография">
             </div>
           </div>
           <div class="features">
@@ -60,19 +68,22 @@
               <p class="blue-block-number">- №2 -</p>
               <p class="blue-block-text">Да, по нему можно пройти! Если, конечно, Вы осмелитесь</p>
             </div>
+            <div class="first-reasons-pic">
+              <img src="img/Layer2.jpg" width="800px" height="260px" alt="фотография">
+            </div>
           </div>
           <div class="last-reasons">
-            <div class="area">
+            <div class="last-reasons-item">
               <b>Небольшая площадь</b>
               <p class="last-reasons-number">- №3 -</p>
               <p class="last-reasons-text">Все достопримечательности находятся очень близко</p>
             </div>
-            <div class="road">
+            <div class="last-reasons-item">
               <b>Красивая дорога</b>
               <p class="last-reasons-number">- №4 -</p>
               <p class="last-reasons-text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
             </div>
-            <div class="tourists">
+            <div class="last-reasons-item">
               <b>Мало туристов</b>
               <p class="last-reasons-number">- №5 -</p>
               <p class="last-reasons-text">Большинство едет в Гранд Каньон и толпится там</p>
@@ -107,15 +118,15 @@
           </div>
         </main>
         <footer>
-          <div class="footer-item">
+          <div class="visit-sedona">
             <a href="#">#VisitSedona</a>
           </div>
-          <div class="footer-item">
-            <a href="#">Иконка 1</a>
+          <div class="footer-social">
+            <a href="#">Twitter</a>
             <a href="#">Facebook</a>
-            <a href="#">Иконка 3</a>
+            <a href="#">Youtube</a>
           </div>
-          <div class="footer-item">
+          <div class="footer-academy">
             <a href="#">Website by html academy</a>
           </div>
         </footer>
