--- a/hotels.html
+++ b/hotels.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Гостиницы</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <div class="container">
@@ -24,7 +25,7 @@
             </ul>
           </nav>
           <div class="logo">
-            <img src="logo.png" width="67" height="56" alt="City of Sedona">
+            <img src="img/logo.png" width="138" height="70" alt="City of Sedona">
           </div>
         </header>
         <main class="hotels-main">
@@ -64,10 +65,20 @@
                   </li>
                 </ul>
               </div>
-              <div class="cost">
-                Стоимость в сутки (р):
-                от 0 до 3000
-                <a href="#" class="show-btn">Показать</a>
+              <div class="filter-range">
+                <div class="filter-range-title">Стоимость в сутки (р):</div>
+                <div class="price-controls">
+                  <label class="min-price">от <input type="text" name="min-price" value="0"></label>
+                  <label class="max-price">до <input type="text" name="max-price" value="3000"></label>
+                </div>
+                <div class="range-controls">
+                  <div class="scale">
+                    <div class="bar"></div>
+                  </div>
+                  <div class="range-toggle range-toggle-min"></div>
+                  <div class="range-toggle range-toggle-max"></div>
+                </div>
+                <button class="btn-transparent" type="submit">Показать</button>
               </div>
             </form>
           </div>
@@ -82,8 +93,8 @@
           </div>
           <div class="found-hotels">
             <div class="found-hotels-item">
-              <img src="#" width="135" height="90" alt="Гостиница">
-              <h3>Amara Resort & Spa</h3>
+              <img src="img/Amara.jpg" width="135" height="90" alt="Гостиница">
+              <a href="#">Amara Resort & Spa</a>
               <p>Гостиница</p>
               <p>От 4000 р.</p>
               <a href="#" class="detailed">Подробнее</a>
@@ -94,8 +105,8 @@
               </div>
             </div>
             <div class="found-hotels-item">
-              <img src="#" width="135" height="90" alt="Мотель">
-              <h3>Desert Quail Inn</h3>
+              <img src="img/Desert.jpg" width="135" height="90" alt="Мотель">
+              <a href="#">Desert Quail Inn</a>
               <p>Мотель</p>
               <p>От 3000 р.</p>
               <a href="#" class="detailed">Подробнее</a>
@@ -106,8 +117,8 @@
               </div>
             </div>
             <div class="found-hotels-item">
-              <img src="#" width="135" height="90" alt="Апартаменты">
-              <h3>Villas At Poco Diablo</h3>
+              <img src="img/Villas.jpg" width="135" height="90" alt="Апартаменты">
+              <a href="#">Villas At Poco Diablo</a>
               <p>Апартаменты</p>
               <p>От 2000 р.</p>
               <a href="#" class="detailed">Подробнее</a>
@@ -124,9 +135,9 @@
             <a href="#">#VisitSedona</a>
           </div>
           <div class="footer-item">
-            <a href="#">Иконка 1</a>
+            <a href="#">Twitter</a>
             <a href="#">Facebook</a>
-            <a href="#">Иконка 3</a>
+            <a href="#">Youtube</a>
           </div>
           <div class="footer-item">
             <a href="#">Website by html academy</a>
