--- a/hotels.html
+++ b/hotels.html
@@ -83,46 +83,64 @@
             </form>
           </div>
           <div class="found">
-            <b>Найдено: 3</b>
-            <a href="#">Сортировка</a>
-            <a href="#">По цене</a>
-            <a href="#">По типу</a>
-            <a href="#">По рейтингу</a>
-            <a href="#">&#9650;</a>
-            <a href="#">&#9660;</a>
+            <div class="found-b">
+              <b>Найдено: 3</b>
+            </div>
+            <div class="found-items">
+              <a href="#">Сортировка</a>
+              <a href="#">По цене</a>
+              <a href="#">По типу</a>
+              <a href="#">По рейтингу</a>
+            </div>
+            <div class="up-and-down">
+              <a href="#">&#9650;</a>
+              <a href="#">&#9660;</a>
+            </div>
           </div>
           <div class="found-hotels">
             <div class="found-hotels-item">
-              <img src="img/Amara.jpg" width="135" height="90" alt="Гостиница">
-              <a href="#">Amara Resort & Spa</a>
-              <p>Гостиница</p>
-              <p>От 4000 р.</p>
-              <a href="#" class="detailed">Подробнее</a>
-              <a href="#" class="book">Забронировать</a>
+              <div class="hotel-img">
+                <img src="img/Amara.jpg" width="135" height="90" alt="Гостиница">
+              </div>
+              <div class="about-hotel">
+                <a href="#">Amara Resort & Spa</a>
+                <p>Гостиница</p>
+                <p>От 4000 р.</p>
+                <a href="#" class="detailed">Подробнее</a>
+                <a href="#" class="book">Забронировать</a>
+              </div>
               <div class="rating">
                 <div class="stars">&#9733; &#9733; &#9733; &#9733;</div>
                 <div class="mark">Рейтинг: 8,5</div>
               </div>
             </div>
             <div class="found-hotels-item">
-              <img src="img/Desert.jpg" width="135" height="90" alt="Мотель">
-              <a href="#">Desert Quail Inn</a>
-              <p>Мотель</p>
-              <p>От 3000 р.</p>
-              <a href="#" class="detailed">Подробнее</a>
-              <a href="#" class="book">Забронировать</a>
+              <div class="hotel-img">
+                <img src="img/Desert.jpg" width="135" height="90" alt="Мотель">
+              </div>
+              <div class="about-hotel">
+                <a href="#">Desert Quail Inn</a>
+                <p>Мотель</p>
+                <p>От 3000 р.</p>
+                <a href="#" class="detailed">Подробнее</a>
+                <a href="#" class="book">Забронировать</a>
+              </div>
               <div class="rating">
                 <div class="stars">&#9733; &#9733; &#9733;</div>
                 <div class="mark">Рейтинг: 8,9</div>
               </div>
             </div>
             <div class="found-hotels-item">
-              <img src="img/Villas.jpg" width="135" height="90" alt="Апартаменты">
-              <a href="#">Villas At Poco Diablo</a>
-              <p>Апартаменты</p>
-              <p>От 2000 р.</p>
-              <a href="#" class="detailed">Подробнее</a>
-              <a href="#" class="book">Забронировать</a>
+              <div class="hotel-img">
+                <img src="img/Villas.jpg" width="135" height="90" alt="Апартаменты">
+              </div>
+              <div class="about-hotel">
+                <a href="#">Villas At Poco Diablo</a>
+                <p>Апартаменты</p>
+                <p>От 2000 р.</p>
+                <a href="#" class="detailed">Подробнее</a>
+                <a href="#" class="book">Забронировать</a>
+              </div>
               <div class="rating">
                 <div class="stars">&#9733; &#9733;</div>
                 <div class="mark">Рейтинг: 9.2</div>
@@ -131,15 +149,15 @@
           </div>
         </main>
         <footer>
-          <div class="footer-item">
+          <div class="visit-sedona">
             <a href="#">#VisitSedona</a>
           </div>
-          <div class="footer-item">
+          <div class="footer-social">
             <a href="#">Twitter</a>
             <a href="#">Facebook</a>
             <a href="#">Youtube</a>
           </div>
-          <div class="footer-item">
+          <div class="footer-academy">
             <a href="#">Website by html academy</a>
           </div>
         </footer>
