что-то не так с фоновой картинкой

--- a/hotels.html
+++ b/hotels.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Гостиницы</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
@@ -80,6 +82,7 @@
                 </div>
                 <button class="btn-transparent" type="submit">Показать</button>
               </div>
+              <div class="clearfix"></div>
             </form>
           </div>
           <div class="found">
