Декоративные элементы в процессе

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
       <header>
           <nav>
             <ul>
-              <li>
+              <li class="nav-info">
                 <a href="#">Информация</a>
               </li>
-              <li>
+              <li class="nav-photo">
                 <a href="#">Фото и видео</a>
               </li>
-              <li>
+              <li class="nav-map">
                 <a href="#">Карта штата</a>
               </li>
-              <li>
+              <li class="nav-hotels">
                 <a href="#">Гостиницы</a>
               </li>
             </ul>
@@ -35,8 +35,8 @@
             <div class="greeting-img">
               <img src="img/Welcome.png" width="458" height="352" alt="Welcome to Sedona!">
             </div>
-            <div class="greetin-text">
-              <b>Седона - небольшой городок в Аризоне, заслуживающий большего!</b>
+            <div class="greeting-text">
+              <b>Седона — небольшой городок в Аризоне, заслуживающий большего!</b>
               <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
             </div>
           </div>
