--- a/hotels.html
+++ b/hotels.html
@@ -10,22 +10,22 @@
   <body>
     <div class="container">
       <header>
-          <nav>
-            <ul>
-              <li>
-                <a href="#">Информация</a>
-              </li>
-              <li>
-                <a href="#">Фото и видео</a>
-              </li>
-              <li>
-                <a href="#">Карта штата</a>
-              </li>
-              <li>
-                <a class="grey" href="#">Гостиницы</a>
-              </li>
-            </ul>
-          </nav>
+        <nav>
+          <ul>
+            <li>
+              <a class="nav-info" href="#">Информация</a>
+            </li>
+            <li>
+              <a class="nav-photo" href="#">Фото и видео</a>
+            </li>
+            <li>
+              <a class="nav-map" href="#">Карта штата</a>
+            </li>
+            <li>
+              <a class="nav-hotels" href="#">Гостиницы</a>
+            </li>
+          </ul>
+        </nav>
           <div class="logo">
             <img src="img/logo.png" width="138" height="70" alt="City of Sedona">
           </div>
