--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
             </ul>
           </nav>
           <div class="logo">
-            <img src="img/logo.png" width="138" height="70" alt="City of Sedona">
+            <a href>
+              <img src="img/logo.png" width="138" height="70" alt="City of Sedona">
+            </a>
           </div>
         </header>
         <main class="index-main">
@@ -43,34 +45,43 @@
           <div class="first-reasons">
             <div class="blue-block">
               <b>Настоящий городок</b>
-              <p class="blue-block-number">- №1 -</p>
-              <p class="blue-block-text">Седона - не аттракцион для туристов, там течет своя жизнь</p>
+              <p class="blue-block-number">— №1 —</p>
+              <p class="blue-block-text">Седона — не аттракцион для туристов,<br> там течет своя жизнь</p>
             </div>
             <div class="first-reasons-pic">
-              <img src="img/Layer1.jpg" width="800px" height="260px" alt="фотография">
+              <img src="img/Layer1.jpg" width="800px" height="256px" alt="фотография">
             </div>
           </div>
           <div class="features">
             <div class="features-item">
+              <div class="features-img">
+                <img src="img/house.png" width="75" height="72" alt="Жилье">
+              </div>
               <b>Жилье</b>
               <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
             </div>
             <div class="features-item">
+              <div class="features-img">
+                <img src="img/food.png" width="74" height="70" alt="Еда">
+              </div>
               <b>Еда</b>
               <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
             </div>
             <div class="features-item">
+              <div class="features-img">
+                <img class="souvenirs" src="img/souvenirs.png" width="64" height="76" alt="Сувениры">
+              </div>
               <b>Сувениры</b>
               <p>Не только китайского, но и местного производства!</p>
             </div>
           </div>
           <div class="first-reasons">
             <div class="first-reasons-pic">
-              <img src="img/Layer2.jpg" width="800px" height="260px" alt="фотография">
+              <img src="img/Layer2.jpg" width="800px" height="256px" alt="фотография">
             </div>
             <div class="blue-block">
               <b>Там есть мост дьявола</b>
-              <p class="blue-block-number">- №2 -</p>
+              <p class="blue-block-number">— №2 —</p>
               <p class="blue-block-text">Да, по нему можно пройти! Если, конечно, Вы осмелитесь</p>
             </div>
           </div>
