--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <nav>
             <ul>
               <li class="nav-info">
-                <a href="#">Информация</a>
+                <a href="#">Информация Привет</a>
               </li>
               <li class="nav-photo">
                 <a href="#">Фото и видео</a>
