--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <nav>
             <ul>
               <li class="nav-info">
-                <a href="#">Информация Привет</a>
+                <a href="#">Информация</a>
               </li>
               <li class="nav-photo">
                 <a href="#">Фото и видео</a>
@@ -88,17 +88,17 @@
           <div class="last-reasons">
             <div class="last-reasons-item">
               <b>Небольшая площадь</b>
-              <p class="last-reasons-number">- №3 -</p>
+              <p class="last-reasons-number">— №3 —</p>
               <p class="last-reasons-text">Все достопримечательности находятся очень близко</p>
             </div>
             <div class="last-reasons-item">
               <b>Красивая дорога</b>
-              <p class="last-reasons-number">- №4 -</p>
+              <p class="last-reasons-number">— №4 —</p>
               <p class="last-reasons-text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
             </div>
             <div class="last-reasons-item">
               <b>Мало туристов</b>
-              <p class="last-reasons-number">- №5 -</p>
+              <p class="last-reasons-number">— №5 —</p>
               <p class="last-reasons-text">Большинство едет в Гранд Каньон и толпится там</p>
             </div>
           </div>
