правки на главной

--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
       <header>
           <nav>
             <ul>
-              <li class="nav-info">
+              <li>
                 <a href="#">Информация</a>
               </li>
-              <li class="nav-photo">
+              <li>
                 <a href="#">Фото и видео</a>
               </li>
-              <li class="nav-map">
-                <a href="#">Карта штата</a>
-              </li>
-              <li class="nav-hotels">
+              <li>
                 <a href="#">Гостиницы</a>
+              </li>
+              <li>
+                <a href="#">Карта штата</a>
               </li>
             </ul>
           </nav>
@@ -37,10 +37,10 @@
             <div class="greeting-img">
               <img src="img/Welcome.png" width="458" height="352" alt="Welcome to Sedona!">
             </div>
-            <div class="greeting-text">
+          </div>
+          <div class="about-Sedona">
               <b>Седона — небольшой городок в Аризоне, заслуживающий большего!</b>
               <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
-            </div>
           </div>
           <div class="first-reasons">
             <div class="blue-block">
